// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test HOC. Should call scrollById. 1`] = `
<div>
  <div>
    <div
      id="foo"
    />
    <button>
      test
    </button>
  </div>
</div>
`;

exports[`Test HOC. Should render the functional children. 1`] = `
<div>
  <div>
    test
  </div>
</div>
`;
